compiler/testData/diagnostics/tests/tailRecursions/functionWithNoTails.kt
<!NO_TAIL_RECURSIONS_FOUND!>tailRecursive fun noTails()<!> {
    // nothing here
}